# Campus-Placement

./: .gitignore  README.md  carrer_predictor.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
config/: config.yaml
data/aggregates/: market_data_analyst.json
data/interim/: linkedin_schema_summary.json
scripts/: build_linkedin_aggregates.py  explore_linkedin_dataset.py  run_cli.py  verify_linkedin_data.py
src/placex/extraction/: __init__.py  resume_pdf.py
src/placex/market/: __init__.py  dataset_benchmark.py  linkedin_loader.py  news.py  trends.py
src/placex/matching/: __init__.py  ats_score.py  skill_matcher.py
src/placex/nlp/: __init__.py  cover_letter.py  keyword_extractor.py  preprocess.py
src/placex/pipeline/: runner.py
src/placex/reporting/: __init__.py  schemas.py  write_report.py
src/placex/visualization/: __init__.py  charts.py
