[project]
name = "campus-placement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "huggingface-hub>=0.20.0",
    "matplotlib>=3.7.0",
    "nltk>=3.8.0",
    "pandas>=2.0.0",
    "pdfplumber>=0.11.0",
    "pytrends>=4.9.2",
    "pyyaml>=6.0.0",
    "streamlit>=1.31.0",
]
